vlib/v/parser/tests/dollar_err.out
vlib/v/parser/tests/dollar_err.vv:1:1: error: unexpected eof
    1 | $
      | ^
